{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 9,
  "lineage": "5a98aa55-f8cd-97b0-bc15-fd9c461c2b7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].active",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:143794216648:security-group/sg-0444e4f246d1587b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0444e4f246d1587b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "UDARR-Database",
            "name_prefix": "",
            "owner_id": "143794216648",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047506231a6fc3960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:143794216648:security-group/sg-066cc3764c7ab8e66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066cc3764c7ab8e66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "UDARR-Database",
            "name_prefix": "",
            "owner_id": "143794216648",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01264506d9db332f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].active",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:143794216648:subnet/subnet-0a208a7611bc6cfb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a208a7611bc6cfb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143794216648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Primary VPC"
            },
            "tags_all": {
              "Name": "Private Subnet Primary VPC"
            },
            "vpc_id": "vpc-047506231a6fc3960"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:143794216648:subnet/subnet-0fc957b65541fbc2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc957b65541fbc2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143794216648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Secondary VPC"
            },
            "tags_all": {
              "Name": "Private Subnet Secondary VPC"
            },
            "vpc_id": "vpc-01264506d9db332f1"
          },
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].active",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:143794216648:vpc/vpc-047506231a6fc3960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c49e9e90b038e92b",
            "default_route_table_id": "rtb-0778a9834fc3d6a5d",
            "default_security_group_id": "sg-0639052b05e348952",
            "dhcp_options_id": "dopt-0142938ddc8c02134",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047506231a6fc3960",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0778a9834fc3d6a5d",
            "owner_id": "143794216648",
            "tags": {
              "Name": "Primary"
            },
            "tags_all": {
              "Name": "Primary"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:143794216648:vpc/vpc-01264506d9db332f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a21a76173fbb1d3d",
            "default_route_table_id": "rtb-0397082035122968a",
            "default_security_group_id": "sg-0eebfb876b9958ab9",
            "dhcp_options_id": "dopt-009cfbdaa43ad303f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01264506d9db332f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0397082035122968a",
            "owner_id": "143794216648",
            "tags": {
              "Name": "Secondary"
            },
            "tags_all": {
              "Name": "Secondary"
            }
          }
        }
      ]
    }
  ]
}